package csd230.lab1.pojos;

import java.util.Date;

public class DiscMag extends Magazine {
    private Boolean hasDisc;

    public DiscMag() {
    }

    public DiscMag(Boolean hasDisc, Integer orderQty, Date currentIssue, String title, Double price, Integer copies) {
        super(orderQty, currentIssue, title, price, copies);
        this.hasDisc = hasDisc;
    }

    @Override
    public void initialize() {
        super.initialize(); // Title, Qty, Date, Copies, Price

        System.out.println("Has Disc? (true/false):");
        this.hasDisc = getInput(false);
    }

    @Override
    public void edit() {
        super.edit(); // Title, Price, Copies, OrderQty, Date

        System.out.println("Edit Has Disc [" + this.hasDisc + "]:");
        this.hasDisc = getInput(this.hasDisc);
    }

    @Override
    public void sellItem() {
        System.out.println("Selling Disc Magazine (Disc: " + hasDisc + ")");
        setCopies(getCopies() - 1);
    }

    public Boolean isHasDisc() { return hasDisc; }
    public void setHasDisc(Boolean h) { this.hasDisc = h; }

    @Override
    public String toString() {
        return "DiscMag{hasDisc=" + hasDisc + ", " + super.toString() + "}";
    }
}