classDiagram
    Serializable <|.. ProductEntity
    SaleableItem <|.. ProductEntity

    ProductEntity <|-- Ticket
    ProductEntity <|-- Publication
    ProductEntity <|-- ClothingItem

    Publication <|-- Book
    Publication <|-- Magazine
    Magazine <|-- DiscMag

    ClothingItem <|-- Jacket
    ClothingItem <|-- TShirt

    ProductEntity "many" --* "many" CartEntity : cart_products
    ProductEntity "many" --* "many" OrderEntity : order_products

    class CartEntity {
        -Long id
        -Set~ProductEntity~ products
        +void addProduct(ProductEntity product)
        +Long getId()
        +void setId(Long id)
        +Set~ProductEntity~ getProducts()
        +void setProducts(Set~ProductEntity~ products)
    }

    class OrderEntity {
        -Long id
        -double totalAmount
        -LocalDateTime orderDate
        -Set~ProductEntity~ products
        +Long getId()
        +double getTotalAmount()
        +void setTotalAmount(double)
        +LocalDateTime getOrderDate()
        +void setOrderDate(LocalDateTime)
        +Set~ProductEntity~ getProducts()
        +void setProducts(Set~ProductEntity~)
    }

    class ProductEntity {
        <<abstract>>
        -Long id
        -Set~CartEntity~ carts
        +Set~CartEntity~ getCarts()
        +void setCarts(Set~CartEntity~)
        +Long getId()
        +void setId(Long id)
        +String getProductType()
        +toString() String
    }

    class Serializable {
        <<interface>>
    }

    class SaleableItem {
        <<interface>>
        +sellItem()
        +getPrice() double
    }

    class Ticket {
        +String description
        +double price
        +sellItem()
    }

    class Publication {
        <<abstract>>
        -String title
        -double price
        -int copies
        +getPrice() double
        +toString() String
        +equals(Object) boolean
        +hashCode() int
    }

    class Book {
        -String author
        +edit()
        +initialize()
        +sellItem()
    }

    class Magazine {
        -int orderQty
        -Date currentIssue
        +edit()
        +initialize()
        +sellItem()
    }

    class DiscMag {
        -boolean hasDisc
        +edit()
        +initialize()
        +sellItem()
    }

    class ClothingItem {
        <<abstract>>
        -String size
        -double price
        -int copies
        +getPrice() double
        +sellItem()
    }

    class Jacket {
        -boolean insulated
        +sellItem()
    }

    class TShirt {
        -String sleeveLength
        +sellItem()
    }

    class CashTill {
        -double runningTotal
        +showTotal()
        +sellItem(SaleableItem item)
    }
